[gd_scene load_steps=3 format=3 uid="uid://8cpcvda0lxvh"]

[ext_resource type="Theme" uid="uid://7fkam3v6qs6" path="res://ui/pixel_ui_theme.tres" id="1_ss15q"]
[ext_resource type="Script" uid="uid://bayesktnabcs0" path="res://ui/level_success_ui.gd" id="2_4vrav"]

[node name="LevelSuccessUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 100.0
offset_right = -200.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ss15q")
script = ExtResource("2_4vrav")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.054902, 0.054902, 0.054902, 0.843137)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -49.5
offset_right = 49.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_right = 128

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 16
columns = 2

[node name="RemainingHealthLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Remaining Health:"

[node name="RemainingHealthProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 1.0

[node name="ComboScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Combo Score:"

[node name="MonstersEliminated" type="ProgressBar" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartLevelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Restart Level"

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Continue"
